<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Mobile CRM</string>
    <string name="action_logout" translatable="false">Logout</string>
    <string name="text_divider" translatable="false">|</string>
    <string name="tag_date_picker" translatable="false">date_picker</string>
    <string name="hypen" translatable="false">-</string>
    <string name="colon" translatable="false">:</string>

    <string name="action_cancel">Batal</string>
    <string name="title_activity_main">CRM SiSi</string>
    <string name="title_activity_login">Login CRM SiSi</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Pengaturan</string>
    <string name="action_survey_list">Daftar Survey</string>
    <string name="action_survey_agenda">Agenda Survey</string>
    <string name="action_statistics">Statistik</string>
    <string name="action_store_list">Daftar toko</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hint_search_store">Cari toko</string>
    <string name="action_search_by_date"> Tanggal survey</string>
    <string name="title_activity_survey">Tambah Data Survey</string>
    <string name="title_edit_survey">Edit Data Survey</string>
    <string name="action_save">Simpan</string>
    <string name="title_survey_price">Harga</string>
    <string name="hint_item_name">Nama Semen</string>
    <string name="hint_item_size">Ukuran</string>
    <string name="hint_selling_price">Harga Jual</string>
    <string name="hint_volume">Jumlah Penjualan / Bln</string>
    <string name="hint_stock">Stok</string>
    <string name="hint_notes">Catatan</string>
    <string name="title_fragment_complaints">Keluhan</string>
    <string name="title_fragment_order">Order</string>
    <string name="message_request_cancel">Permintaan dibatalkan</string>
    <string name="title_activity_add_store">Tambah Toko</string>
    <string name="title_activity_survey_detail">Detail Survey</string>
    <string name="title_fragment_survey_image">Foto survey</string>
    <string name="title_priority">Prioritas</string>
    <string name="title_distance">Jarak</string>
    <string name="title_date">Tanggal</string>
    <string name="title_newstore">Baru</string>
    <string name="hint_amount">Jumlah</string>
    <string name="title_activity_order">Tambah Order</string>
    <string name="title_dialog_add_visitation">Tambah Rencana Kunjungan</string>
    <string name="title_activity_store_detail">Detail Toko</string>
    <string name="message_retry">Gagal menghubungi server, mencoba kembali...</string>
    <string name="title_activity_order_detail">Detail Order</string>
    <string name="message_save_success">Data tersimpan</string>
    <string name="message_no_data">Tidak ada data</string>
    <string name="message_no_store">Tidak ada data toko</string>
    <string name="action_delete">Hapus</string>
    <string name="message_delete_succeeded">Data berhasil dihapus</string>
    <string name="message_delete_failed">Gagal menghapus data</string>
    <string name="action_detail">Detail</string>
    <string name="message_save_failed">Gagal menyimpan data</string>
    <string name="action_order">Pesan</string>
    <string name="message_blank_agenda">Belum ada rencana kunjungan</string>
    <string name="message_greeting">Selamat Datang!</string>
    <string name="action_next">Selanjutnya</string>
    <string name="action_prev">Sebelumnya</string>
    <string name="title_activity_map">Kembali</string>
    <string name="action_select_location">Pilih Lokasi Ini</string>
    <string name="content_description_store_image">Gambar Toko</string>
    <string name="action_forgot_password">Lupa username atau password?</string>
    <string name="message_blank_history_survey">Tidak ada data survey</string>
    <string name="message_blank_history_order">Tidak ada data order</string>
    <string name="message_blank_store_list">Daftar toko kosong</string>
    <string name="message_blank_new_store_list">Daftar toko baru kosong</string>
    <string name="message_blank_agenda_action">Silakan menambah rencana kunjungan dari daftar toko yang tersedia</string>
    <string name="action_to_store_list">&#xf0b1; Ke halaman daftar toko</string>
    <string name="text_survey_statistics">Statistik Survey</string>
    <string name="message_statistics_note_order"><![CDATA[Order <b>%1$s</b> %3$s semen telah disetujui dari total order sebesar <b>%2$s</b> %3$s]]></string>
    <string name="message_statistics_note_visit"><![CDATA[Anda telah melakukan <b>%1$s</b> kali kunjungan pada <b>%2$s</b> toko dari total <b>%3$s</b> toko yang ada]]></string>
    <string name="action_done">Done</string>
    <string name="message_about">%1$s\nAndroid App version %2$s\n\nCopyright &#xf1f9; 2015 PT. Sinergi Informatika</string>
    <string name="text_position_sales">Sales di %1$s</string>
    <string name="text_position_am">AM untuk %1$s</string>
    <string name="message_downloading">Sedang mengunduh data....</string>
    <string name="prompt_competitor_program">Tulis catatan tentang program pesaing di sini</string>
    <string name="text_history_survey_date">diisi pada %1$s</string>
    <string name="text_history_order_date">Order dilakukan pada %1$s</string>
    <string name="action_edit">Ubah</string>
    <string name="title_competitor_program">Program Kompetitor</string>
    <string name="title_competitor_program_short">Kompetitor</string>
    <string name="action_check_in" translatable="false">&#xf090;\nCheck In</string>
    <string name="action_check_out" translatable="false">&#xf08b;\nCheck Out</string>
    <string name="action_competitor" translatable="false">competitor_programs</string>
    <string name="action_complain" translatable="false">complain</string>
    <string name="hint_buying_price">Harga Beli</string>
    <string name="message_blank_agenda_past">Tidak ada rencana kunjungan pada tanggal ini</string>
    <string name="hint_term_of_payment" translatable="false">Term of Payment</string>
    <string name="action_sync">Sinkronisasi data</string>
    <string name="title_sync_logout">Sinkronisasi dan Logout</string>
    <string name="message_version_check">Memeriksa versi terbaru</string>
    <string name="title_notif_app_update">Pembaruan Aplikasi</string>
    <string name="message_app_update">Aplikasi versi %1$s telah dirilis. Silakan buka aplikasi untuk memperbarui.</string>
    <string name="content_description_logo" translatable="false">logo</string>
    <string name="error_sync_in_progress">Sedang melakukan sinkronisasi data</string>
    <string name="hint_religion">Pilih agama</string>
    <string name="action_change_pass">Ubah password</string>
    <string name="title_dialog_change_password">Ubah Password</string>
    <string name="tag_change_password" translatable="false">change_password</string>
    <string name="hint_password_old">Password lama</string>
    <string name="hint_password_new">Password baru</string>
    <string name="hint_password_confirm">Konfirmasi password baru</string>
    <string name="authorities" translatable="false">com.sinergiinformatika.sisicrm.providers</string>
    <string name="tray__authority" translatable="false">com.sinergiinformatika.sisicrm.tray</string>
    <string name="title_sync_completed">Sinkronisasi Data Selesai</string>
    <string name="error_logout_pending_exist">Masih ada data yang belum terkirim, Anda yakin untuk logout?</string>
    <string name="label_confirm_positive">Ya</string>
    <string name="label_confirm_negative">Tidak</string>
    <string name="error_download_promotion_programs">Gagal mengunduh data program promosi</string>
    <string name="error_no_distributor">Anda belum memiliki penugasan untuk distributor</string>
    <string name="error_no_city">Anda belum memiliki penugasan untuk kota</string>
    <string name="error_no_programs">Tidak ada master data program promosi</string>
    <string name="error_no_complain_list">Tidak ada data master keluhan pelanggan</string>
    <string name="error_no_province">Anda belum memiliki penugasan untuk provinsi</string>
    <string name="error_no_store">Tidak ada data toko</string>
    <string name="error_no_subdistrict">Anda belum memiliki penugasan untuk kecamatan</string>
    <string name="label_asterisk" translatable="false">*</string>
    <string name="tag_survey" translatable="false">survey</string>
    <string name="label_create_date_unknown">Tanggal pembuatan tidak diketahui</string>
    <string name="label_this_week">Pekan ini</string>
    <string name="label_last_week">Pekan lalu</string>
    <string name="label_two_weeks_ago">Dua pekan yang lalu</string>
    <string name="label_one_month_ago">Sebulan yang lalu</string>
    <string name="label_more_than_one_month_ago">Lebih dari sebulan</string>
    <string name="error_unknown">An error has occured</string>

    <string name="action_push_data">Push 10 Data Terlama</string>
    <string name="title_push_completed">Push Data Selesai</string>
</resources>
