<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sinergiinformatika.sisicrm.MainActivity">
    <item
        android:id="@+id/action_survey_list"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_survey_list" />
    <item
        android:id="@+id/action_store_list"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_store_list" />
    <item
        android:id="@+id/action_survey_history"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_survey_agenda" />
    <item
        android:id="@+id/action_survey_statistics"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:title="@string/action_statistics" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
